<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Failword</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_saving">Saving&#8230;</string>
    <string name="error_hint">Error occurred!</string>
    <string name="cancel_hint">Operation Canceled!</string>
    <string name="loading_text">Failword</string>
    <string name="loading_login">Sign in</string>
    <string name="loading_logining">Signing&#8230;</string>
    <string name="loading_hint">Global key</string>
    <string name="loading_wrong_key_tip">Wrong global key!</string>
    <string name="loading_forbidden">Input wrong key too many times, try again tomorrow&#8230;</string>
    <string name="loading_exception_tip">Exception occurred! Restart please&#8230;</string>
    <string name="loading_agreement">Use Means <a href="http://www.moonshile.com/post/product/failword-agreement">AGREEMENT</a></string>
    <string name="main_activity_title">Failword</string>
    <string name="main_search_hint">Search by tag</string>
    <string name="main_action_add_record">Add Record</string>
    <string name="main_action_export">Export</string>
    <string name="main_action_import">Import</string>
    <string name="main_action_merge">Merge same data</string>
    <string name="main_action_about">About</string>
    <string name="main_action_change_key">Change global key</string>
    <string name="main_edit_ok">Record already saved</string>
    <string name="main_export_ok">Exported to: </string>
    <string name="main_merged">Same records has been merged after import</string>
    <string name="main_import_error_hint">Error occurred while importing, might for wrong key</string>
    <string name="main_import_progress_text_reading">Reading from file: </string>
    <string name="main_import_progress_text_importing">Importing: </string>
    <string name="main_import_progress_text_merging">Merging: </string>
    <string name="main_import_progress_count_unknown">(unknown)</string>
    <string name="main_change_ok">Success! Resign in please</string>
    <string name="main_change_error">Error occurred, try again?</string>
    <string name="grid_item_image_desc">logo of app</string>
    <string name="plus">+</string>
    <string name="edit_activity_title">Edit Record</string>
    <string name="edit_tag_hint">Tag, such as Google</string>
    <string name="edit_username_hint">Username, such as abc@gmail.com</string>
    <string name="edit_password_hint">Password, such as abc123</string>
    <string name="edit_remarks_hint">Remarks, other info you need</string>
    <string name="detail_activity_title">Detail</string>
    <string name="detail_tag_text">Tag:</string>
    <string name="detail_username_text">Username:</string>
    <string name="detail_password_text">Password:</string>
    <string name="detail_remarks_text">Remarks:</string>
    <string name="detail_btn_back">Back</string>
    <string name="detail_btn_edit">Edit</string>
    <string name="detail_btn_delete">Del</string>
    <string name="detail_delete_warning">Long click to delete!</string>
    <string name="detail_hidden">****** (Touch gray area to watch)</string>
    <string name="change_pwd_activity_title">Change global key</string>
    <string name="change_old_pwd_hint">Old password</string>
    <string name="change_new_pwd_hint">New password</string>
    <string name="change_new_pwd_cfm_hint">Confirm new password</string>
    <string name="change_wrong_old_key">Wrong old key</string>
    <string name="change_dif_new_keys">New keys are different</string>
    <string name="about_activity_title">About</string>
    <string name="about_author">This app is authored by Moonshile, please visit moonshile.com. Any advice, Email to moonshile@foxmail.com</string>
    <string name="about_app">This app is an OSS, you can clone it on https://github.com/Moonshile/Failword. For more information, see Readme file in the source package.</string>
    <string name="lock_activity_title">Lock</string>
    <string name="lock_wrong_key">Wrong key! Remained times to retry: </string>

</resources>
