

<!-- Copyright (C) 2014  Moonshile (moonshile@foxmail.com) -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/light_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moonshile.failword.ChangeKeyActivity" >

    <EditText android:id="@+id/change_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:paddingTop="@dimen/view_vertical_padding"
        android:paddingBottom="@dimen/view_vertical_padding"
        android:hint="@string/change_old_pwd_hint"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText android:id="@+id/change_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "@dimen/small_margin"
        android:paddingTop="@dimen/view_vertical_padding"
        android:paddingBottom="@dimen/view_vertical_padding"
        android:hint="@string/change_new_pwd_hint"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText android:id="@+id/change_new_pwd_cfm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "@dimen/small_margin"
        android:paddingTop="@dimen/view_vertical_padding"
        android:paddingBottom="@dimen/view_vertical_padding"
        android:hint="@string/change_new_pwd_cfm_hint"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button android:id="@+id/change_button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:paddingTop="@dimen/view_horizontal_margin"
        android:paddingBottom="@dimen/view_horizontal_margin"
        android:background="@drawable/button_shape"
        android:text="@string/btn_save"
        android:textColor="@color/dark_gray"
        android:onClick="onSave" />
    
    <Button android:id="@+id/change_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:paddingTop="@dimen/view_horizontal_margin"
        android:paddingBottom="@dimen/view_horizontal_margin"
        android:background="@drawable/button_shape_cancel"
        android:text="@string/btn_cancel"
        android:textColor="@color/dark_gray"
        android:onClick="onCancel" />
    
	<TextView android:id="@+id/change_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/view_horizontal_margin"
        android:paddingRight="@dimen/view_horizontal_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:textColor="@color/light_red"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
