<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moonshile.failword.LoadingActivity" >

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/loading_text_size"
        android:textColor="@color/purple"
        android:shadowRadius="10.0"
        android:shadowColor="@color/purple_shadow"
        android:text="@string/loading_text" />
    
    <EditText
        android:id="@+id/loading_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:inputType="textPassword" 
        android:hint="@string/loading_hint">
        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/loading_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:paddingTop="@dimen/view_horizontal_margin"
        android:paddingBottom="@dimen/view_horizontal_margin"
        android:background="@drawable/button_shape"
        android:text="@string/loading_login"
        android:textColor="@color/dark_gray"
        android:onClick="onLogin" />
    
    <TextView
        android:id="@+id/loading_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/view_horizontal_margin"
        android:paddingRight="@dimen/view_horizontal_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:textColor="@color/dark_gray"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView android:id="@+id/loading_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/loading_agreement"
        android:textColorLink="@android:color/holo_red_dark"
        android:visibility="gone" />

</LinearLayout>
