<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/xdark_gray_opacity"
    tools:context="com.moonshile.failword.DetailActivity"
    android:id="@+id/detail_area" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="top"
        android:background="@color/xlight_blue" >
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <Button android:id="@+id/detail_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_btn_back"
                android:textColor="@color/dark_gray"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="@drawable/small_button_shape"
                android:onClick="onBack" />
            
            <LinearLayout android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right" >
            
	            <Button android:id="@+id/detail_edit"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/small_margin"
	                android:text="@string/detail_btn_edit"
	                android:textColor="@color/dark_gray"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:background="@drawable/small_button_shape"
	                android:onClick="onEdit" />
	            
	            <Button android:id="@+id/detail_delete"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/detail_btn_delete"
	                android:textColor="@color/dark_gray"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:background="@drawable/small_button_shape_alert"
	                android:onClick="onDeleteWarning" />
	            
        	</LinearLayout>
        	
        </LinearLayout>
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin" >
            
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/gray"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:text="@string/detail_tag_text" />
	        
	        <TextView android:id="@+id/detail_tag_content"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/xsmall_margin"
	            android:textColor="@color/dark_gray" />
        
        </LinearLayout>
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin" >
        
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/gray"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:text="@string/detail_username_text" />
	        
	        <TextView android:id="@+id/detail_username_content"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/xsmall_margin"
	            android:textColor="@color/dark_gray" />
        
        </LinearLayout>
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin" >
        
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/gray"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:text="@string/detail_password_text" />
	        
	        <TextView android:id="@+id/detail_password_content"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/xsmall_margin"
	            android:textColor="@color/dark_gray" />
        
        </LinearLayout>
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin" >
        
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/gray"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:text="@string/detail_remarks_text" />
	        
	        <TextView android:id="@+id/detail_remarks_content"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/xsmall_margin"
	            android:textColor="@color/dark_gray" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
