<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/large_margin"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/xxdark_gray_opacity"
    tools:context="com.moonshile.failword.LockActivity" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="top"
        android:background="@drawable/dialog_shape" >
        
		<EditText android:id="@+id/lock_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/small_margin"
	        android:inputType="textPassword" 
	        android:hint="@string/loading_hint">
	        <requestFocus />
	    </EditText>
	    
		<Button android:id="@+id/lock_login"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/small_margin"
	        android:paddingTop="@dimen/view_horizontal_margin"
	        android:paddingBottom="@dimen/view_horizontal_margin"
	        android:background="@drawable/button_shape"
	        android:text="@string/loading_login"
	        android:textColor="@color/dark_gray"
	        android:onClick="onLogin" />
    
		<Button android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/small_margin"
	        android:layout_marginBottom="@dimen/small_margin"
	        android:paddingTop="@dimen/view_horizontal_margin"
	        android:paddingBottom="@dimen/view_horizontal_margin"
	        android:background="@drawable/button_shape_cancel"
	        android:text="@string/btn_cancel"
	        android:textColor="@color/dark_gray"
	        android:onClick="onCancel" />
    
     
    </LinearLayout>

</LinearLayout>
